{
  "explore": "Explore",
  "routes": "Routes",
  "collection": "Collection",
  "guide": "Guide"
}
